inserimento grafico modulo DnsRecon

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -120,10 +120,10 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
                                            
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#apriNmap">Nmap <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a> 
+                                                <a href="#" data-toggle="collapse" data-target="#dnsRecon">Dnsrecon <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a> 
                                             </li>
                                             <li>
-                                                <a href="" target="_blank">Risepttiva sitografia</a>
+                                                <a href="https://github.com/darkoperator/dnsrecon" target="_blank">sito</a>
                                             </li>
                                             <li>
                                                 <a href="#" data-toggle="collapse" data-target="#">VEDI <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
@@ -464,9 +464,60 @@
             </div>
         </div>
     </div>
+    <div class="col-6 col-md-10">
+      <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href="#dns" data-toggle="collapse">
+                            <strong>
+                               DNS
+                            </strong>
+                           
+                        </a>
+                    </div>
+    <div class="col-5">
+        <div class="panel panel-sidebar">
+            <div class="panel-heading">
+                <a href="#" data-toggle="collapse" data-target="#dnsRecon">
+                    <strong>
+                     dnsrecon
+                    </strong>
+                    <span class="caret"></span>
+                </a>
+            </div>
+            <div class="collapse col-5" id="dnsRecon">
+                <div class="panel-body">
+                    <h4>
+                        <strong> Configura modulo </strong>
+                    </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-</div>
-</div>
+
+        <div class="panel panel-sidebar">
+            <div class="panel-heading">
+                <a href="#" data-toggle="collapse" data-target="#vedi2">
+                    <strong>
+                        vedi
+                    </strong>
+                    <span class="caret"></span>
+                </a>
+            </div>
+            <div class="collapse col-5" id="vedi2">
+                <div class="panel-body">
+                    <h4>
+                        <strong> Configura modulo </strong>
+                    </h4>
+                    <hr>
+                   
+                    </div>
+                </div>
+            </div>
+        </div>
+      
+
+
 
 @section scripts{
 <script>
