--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -359,169 +359,9 @@
                         </div>
                     </div>
 
-        </div>
         
         </div>
-         <div class="col-6 col-md-10">
-             <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a href="#web" data-toggle="collapse">
-                            <strong>
-                               WEB
-                            </strong>
-                           
-                        </a>
-                    </div>
-            <div class="col-5">
-                <div class="panel panel-sidebar">
-                    <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#Vega">
-                            <strong>
-                                VEGA
-                            </strong>
-                            <span class="caret"></span>
-                        </a>
-                    </div>
-                    <div class="collapse " >
-                        <div class="panel-body ">
-
-                            <table class="table">
-                                
-                            </table>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-5">
-                    <div class="panel panel-sidebar">
-                        <div class="panel-heading">
-                            <a href="#" data-toggle="collapse" data-target="#">
-                                <strong>
-                                   VEDI
-                                </strong>
-                                <span class="caret"></span>
-                            </a>
-                        </div>
-                        <div class="collapse " >
-                            <div class="panel-body ">
-    
-                                <table class="table" >
-                                    
-                                </table>
-    
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-5">
-                        <div class="panel panel-sidebar">
-                            <div class="panel-heading">
-                                <a href="#" data-toggle="collapse" >
-                                    <strong>
-                                       VEDI
-                                    </strong>
-                                    <span class="caret"></span>
-                                </a>
-                            </div>
-                            <div class="collapse " id="">
-                                <div class="panel-body ">
-        
-                                    <table class="table" >
-                                       
-                                    </table>
-        
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-        </div>
-        
-        </div>
-         <div class="col-6 col-md-10">
-             <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a href="#cms" data-toggle="collapse">
-                            <strong>
-                               CMS
-                            </strong>
-                           
-                        </a>
-                    </div>
-            <div class="col-5">
-                <div class="panel panel-sidebar">
-                    <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#CMSmap">
-                            <strong>
-                                VEDI
-                            </strong>
-                            <span class="caret"></span>
-                        </a>
-                    </div>
-                    <div class="collapse">
-                        <div class="panel-body ">
-
-                            <table class="table">
-                                
-                                   
-                            </table>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-5">
-                    <div class="panel panel-sidebar">
-                        <div class="panel-heading">
-                            <a href="#" data-toggle="collapse" data-target="#">
-                                <strong>
-                                   VEDI
-                                </strong>
-                                <span class="caret"></span>
-                            </a>
-                        </div>
-                        <div class="collapse ">
-                            <div class="panel-body ">
-    
-                                <table class="table" >
-                                
-                                </table>
-    
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-5">
-                        <div class="panel panel-sidebar">
-                            <div class="panel-heading">
-                                <a href="#" data-toggle="collapse" data-target="#">
-                                    <strong>
-                                       VEDI
-                                    </strong>
-                                    <span class="caret"></span>
-                                </a>
-                            </div>
-                            <div class="collapse ">
-                                <div class="panel-body ">
-        
-                                    <table class="table" >
-                                    </table>
-        
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-        </div>
-        
-        </div>
- <div class="col-md-2 sidebar">
-            <div class="row">
-            </div>
- </div>
-         <div class="col-6 col-md-10">
-             <div class="panel panel-default">
+         <div class="panel panel-default">
                     <div class="panel-heading">
                         <a href="#dns" data-toggle="collapse">
                             <strong>
@@ -533,99 +373,47 @@
             <div class="col-5">
                 <div class="panel panel-sidebar">
                     <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#">
+                        <a href="#" data-toggle="collapse" data-target="#dnsRecon">
                             <strong>
-                                VEDI
+                                 DNSRECON
                             </strong>
                             <span class="caret"></span>
                         </a>
                     </div>
-                    <div class="collapse " >
+                    <div class="collapse " id="dnsRecon">
                         <div class="panel-body ">
 
                             <table class="table">
-                                
-                            </table>
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-5">
-                    <div class="panel panel-sidebar">
-                        <div class="panel-heading">
-                            <a href="#" data-toggle="collapse" data-target="#">
-                                <strong>
-                                  VEDI
-                                </strong>
-                                <span class="caret"></span>
-                            </a>
-                        </div>
-                        <div class="collapse ">
-                            <div class="panel-body ">
-    
-                                <table class="table" >
-                                    
-                                </table>
-    
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-5">
-                        <div class="panel panel-sidebar">
-                            <div class="panel-heading">
-                                <a href="#" data-toggle="collapse" data-target="#">
-                                    <strong>
-                                       VEDI
-                                    </strong>
-                                    <span class="caret"></span>
-                                </a>
-                            </div>
-                            <div class="collapse ">
-                                <div class="panel-body ">
-        
-                                    <table class="table" >
-                                       
-                                    </table>
-        
+                                            <th></th>
+                                        </tr>
+                                    </thead>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-
-        </div>
-        
-        </div>
-        <div class="col-md-2 sidebar">
-            <div class="row">
-            </div>
- </div>
-         <div class="col-6 col-md-10">
-             <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a href="#database" data-toggle="collapse">
-                            <strong>
-                               DATABASE
-                            </strong>
-                           
-                        </a>
-                    </div>
-            <div class="col-5">
-                <div class="panel panel-sidebar">
-                    <div class="panel-heading">
-                        <a href="#" data-toggle="collapse" data-target="#">
-                            <strong>
-                             VEDI
-                            </strong>
-                            <span class="caret"></span>
-                        </a>
-                    </div>
-                    <div class="collapse ">
-                        <div class="panel-body ">
-
-                            <table class="table">
-                                
+                                <tbody>
+                                    @foreach (var item in Model.ModuliDNSRECON) { 
+                                    <tr>
+                                        <td>
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                            <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
                             </table>
 
                         </div>
@@ -635,39 +423,41 @@
             <div class="col-5">
                     <div class="panel panel-sidebar">
                         <div class="panel-heading">
-                            <a href="#" data-toggle="collapse" data-target="#">
+                            <a href="#" data-toggle="collapse" data-target="#vedi">
                                 <strong>
-                                    VEDI
+                                  vedi1
                                 </strong>
                                 <span class="caret"></span>
                             </a>
                         </div>
-                        <div class="collapse">
+                        <div class="collapse " id="vedi">
                             <div class="panel-body ">
     
                                 <table class="table" >
-                                    
-                                </table>
-    
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-5">
-                        <div class="panel panel-sidebar">
-                            <div class="panel-heading">
-                                <a href="#" data-toggle="collapse" data-target="#">
-                                    <strong>
-                                        VEDI
-                                    </strong>
-                                    <span class="caret"></span>
-                                </a>
-                            </div>
-                            <div class="collapse " >
-                                <div class="panel-body ">
-        
-                                    <table class="table" >
+                                    <div class="method">
                                       
+                                </table>
+    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-5">
+                        <div class="panel panel-sidebar">
+                            <div class="panel-heading">
+                                <a href="#" data-toggle="collapse" data-target="#vedi2">
+                                    <strong>
+                                        vedi2
+                                    </strong>
+                                    <span class="caret"></span>
+                                </a>
+                            </div>
+                            <div class="collapse " id="vedi2">
+                                <div class="panel-body ">
+        
+                                    <table class="table" >
+                                        <div class="method">
+                                           
                                     </table>
         
                                 </div>
@@ -678,5 +468,5 @@
         </div>
         
         </div>
-
+       
     </div>
